--- a/server/composer.json
+++ b/server/composer.json
@@ -1,10 +1,8 @@
 {
     "$schema": "https://getcomposer.org/schema.json",
-    "name": "laravel/laravel",
+    "name": "apptrade/apptrade",
     "type": "project",
-    "description": "The skeleton application for the Laravel framework.",
-    "keywords": ["laravel", "framework"],
-    "license": "MIT",
+    "description": "",
     "require": {
         "php": "^8.2",
         "laravel/framework": "^12.0",
