--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "server:install": "cd server && composer install"
   },
   "dependencies": {
-    "concurrently": "^9.1.2"
+    "concurrently": "^9.1.2",
+    "react-toastify": "^11.0.5"
   }
 }
