--- a/client/package.json
+++ b/client/package.json
@@ -42,6 +42,7 @@
     "react-helmet": "^6.1.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.1.5",
+    "react-toastify": "^11.0.5",
     "redux": "5.0.1",
     "simplebar-react": "^3.3.0"
   },
