--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -20,7 +20,7 @@ jobs:
       - name: Lint client
         run: |
           cd client
-          npm i
+          npm ci
           npm run pretty
           cd ..
 
