--- a/client/package.json
+++ b/client/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@apptrade/apptrade",
+  "name": "@apptrade/apptrade-pos",
   "version": "1.0",
   "description": "",
   "homepage": ".",
