Update build workflow and client application
- Change default branch from 'master' to 'main' in GitHub Actions workflow
- Replace 'npm run pretty' with 'npm run lint' in client build process
- Update file copy commands in build process to ensure correct file paths
- Modify destination repository name in GitHub Actions to 'apptrade'
- Change user email for GitHub Actions commits
- Update client package.json to allow Vite to serve on host
- Add PaymentModal component to PointOfSale view
- Refactor controls sidebar to include payment method selection
- Remove close buttons from modal components for a cleaner UI
- Update AuthController to use session token correctly
- Delete cached config file to ensure fresh configuration
- Change permissions for cached packages and services files
- Increase product seeder loop count for testing
- Implement PaymentInput component for handling payments
- Create Batch model and migration for batch codes

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,7 +2,7 @@ name: Build
 
 on:
     push:
-        branches: ["master"]
+        branches: ["main"]
     workflow_dispatch:
 
 jobs:
@@ -21,7 +21,7 @@ jobs:
         run: |
           cd client
           npm ci
-          npm run pretty
+          npm run lint
           cd ..
 
       - name: Build client
@@ -29,12 +29,10 @@ jobs:
           cd client
           npm run build
           cp build/assets ../server/public/ -r
-          cp build/index.html ../server/resources/views/index.blade.php
-        
-      - name: Get latest commit hash
-        run: |
-          echo "MASTER_COMMIT_HASH=$(git rev-parse --short HEAD)" >> $GITHUB_ENV
-          echo "COMMIT_URL=https://github.com/${{ github.repository }}/commit/$(git rev-parse HEAD)" >> $GITHUB_ENV
+          cp build/index.html ../server/resources/views
+          rm -rf ../server/resources/views/index.blade.php
+          cp ../server/resources/views/index.html ../server/resources/views/index.blade.php
+          cd ..
 
       - name: Upload
         id: push_directory
@@ -44,8 +42,8 @@ jobs:
         with:
           source-directory: server/
           destination-github-username: 'mrepol742'
-          destination-repository-name: 'apptrade-pos'
-          user-name: github-actions[bot]
-          user-email: github-actions[bot]@users.noreply.github.com
-          commit-message: "Build from ${{ env.COMMIT_URL }}"
-          target-branch: production
+          destination-repository-name: 'apptrade'
+          user-email: mrepol742@gmail.com
+          commit-message: Production
+          target-branch: build
+          
