--- a/server/composer.json
+++ b/server/composer.json
@@ -7,7 +7,8 @@
         "php": "^8.2",
         "laravel/framework": "^12.0",
         "laravel/tinker": "^2.10.1",
-        "rap2hpoutre/fast-excel": "^5.6"
+        "rap2hpoutre/fast-excel": "^5.6",
+        "textalk/websocket": "^1.5"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
