--- a/server/.env.example
+++ b/server/.env.example
@@ -1,4 +1,4 @@
-APP_NAME=Laravel
+APP_NAME="Apptrade Inc."
 APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
@@ -10,6 +10,13 @@ APP_FAKER_LOCALE=en_US
 
 APP_MAINTENANCE_DRIVER=file
 # APP_MAINTENANCE_STORE=database
+
+BUSINESS_NAME="${APP_NAME}"
+BUSINESS_ADDRESS=
+BUSINESS_PHONE=
+BUSINESS_EMAIL=
+BUSINESS_WEBSITE="${APP_URL}"
+BUSINESS_TAX_ID=
 
 PHP_CLI_SERVER_WORKERS=4
 
