Update Sales operations, routing, and enhance UI; refactor related controllers and remove deprecated components.

--- a/server/.env.example
+++ b/server/.env.example
@@ -17,6 +17,7 @@ BUSINESS_PHONE=
 BUSINESS_EMAIL=
 BUSINESS_WEBSITE="${APP_URL}"
 BUSINESS_TAX_ID=
+BUSINESS_VAT_ID=
 
 PHP_CLI_SERVER_WORKERS=4
 
@@ -27,16 +28,16 @@ LOG_STACK=single
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
-DB_CONNECTION=sqlite
+DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
 DB_DATABASE=apptrade
 DB_USERNAME=root
 DB_PASSWORD=
 
-SESSION_DRIVER=database
+SESSION_DRIVER=redis
 SESSION_LIFETIME=120
-SESSION_ENCRYPT=false
+SESSION_ENCRYPT=true
 SESSION_PATH=/
 SESSION_DOMAIN=null
 
@@ -44,12 +45,12 @@ BROADCAST_CONNECTION=log
 FILESYSTEM_DISK=local
 QUEUE_CONNECTION=database
 
-CACHE_STORE=database
+CACHE_STORE=redis
 # CACHE_PREFIX=
 
 MEMCACHED_HOST=127.0.0.1
 
-REDIS_CLIENT=phpredis
+REDIS_CLIENT=predis
 REDIS_HOST=127.0.0.1
 REDIS_PASSWORD=null
 REDIS_PORT=6379
