--- a/server/composer.json
+++ b/server/composer.json
@@ -7,6 +7,7 @@
         "php": "^8.2",
         "laravel/framework": "^12.0",
         "laravel/tinker": "^2.10.1",
+        "predis/predis": "^3.0",
         "rap2hpoutre/fast-excel": "^5.6",
         "textalk/websocket": "^1.5"
     },
